[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bus_app_11372009"
version = "2025.06.22"
description = "台北市公車動態查詢系統，支援路線、轉乘、地圖、即時到站查詢等功能。"
readme = "readme.md"
requires-python = ">=3.9"
authors = [
    { name="chiu yu lun", email="0501yulunallen@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "ace_tools==0.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.9",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "attrs==25.3.0",
    "beartype==0.20.2",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "branca==0.8.1",
    "bs4==0.0.2",
    "cachetools==5.5.2",
    "casefy==1.1.0",
    "catalogue==2.0.10",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "folium==0.19.5",
    "fonttools==4.56.0",
    "frozenlist==1.6.2",
    "geopandas==1.0.1",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "greenlet==3.2.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "Hypercorn==0.17.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "mypy-extensions==1.0.0",
    "narwhals==1.41.1",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pip==24.3.1",
    "playwright==1.51.0",
    "plum-dispatch==2.5.7",
    "priority==2.0.0",
    "propcache==0.3.1",
    "protobuf==6.31.1",
    "pyarrow==20.0.0",
    "pydeck==0.9.1",
    "pyee==12.1.1",
    "Pygments==2.19.1",
    "pyogrio==0.11.0",
    "pyparsing==3.2.1",
    "pyproj==3.7.1",
    "pyserde==0.23.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "scipy==1.15.2",
    "shapely==2.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.6",
    "spic==0.1.0",
    "srsly==2.5.1",
    "streamlit==1.45.1",
    "streamlit-autorefresh==1.0.1",
    "streamlit_folium==0.25.0",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.1",
    "typing_extensions==4.13.2",
    "typing-inspect==0.9.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "watchdog==6.0.0",
    "wsproto==1.2.0",
    "xyzservices==2025.4.0",
    "yarl==1.20.0"
]

[project.urls]
"Homepage" = "https://github.com/Allen-051/cycu_oop_11372009"