[metadata]
name = cycu11372009_bus_info
version = 2025.6.22
description = 台北市公車路線即時查詢
author = 邱昱倫 11372009 (第二組)
license = MIT
long_description = file: readme.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    streamlit
    pandas
    folium
    playwright
    beautifulsoup4
    streamlit_folium
    os
    tempfile
